# TwurtleEngine

./: .gitignore  .gitmodules  CMakeLists.txt
RandomCatEngine/: CMakeLists.txt  engine.cmake
RandomCatEngine/Input/: CMakeLists.txt
RandomCatEngine/Input/include/randomcat/engine/input/: controller.hpp  controller_timer.hpp  input_state.hpp  keycodes.hpp
RandomCatEngine/Input/src/: controller.cpp
RandomCatEngine/LowLevel/: CMakeLists.txt
RandomCatEngine/LowLevel/include/randomcat/engine/low_level/: init.hpp  window.hpp
RandomCatEngine/LowLevel/include/randomcat/engine/low_level/detail/: impl_only_access.hpp  tag_exception.hpp  templates.hpp
RandomCatEngine/LowLevel/include/randomcat/engine/low_level/graphics/: global_gl_calls.hpp  init.hpp  render_context.hpp  shader.hpp  shader_input.hpp  shader_uniforms.hpp  vertex_renderer.hpp
RandomCatEngine/LowLevel/include/randomcat/engine/low_level/graphics/detail/: gl_error_guard.hpp  shader_impl.inl
RandomCatEngine/LowLevel/include/randomcat/engine/low_level/graphics/gl_wrappers/: active_locks.hpp  buffer_raii.hpp  gl_types.hpp  opengl_raii_id.hpp  shader_program_raii.hpp  texture_raii.hpp  vao_raii.hpp  vbo_raii.hpp
RandomCatEngine/LowLevel/src/: init.cpp  window.cpp
RandomCatEngine/LowLevel/src/graphics/: init.cpp  render_context.cpp
RandomCatEngine/LowLevel/src/graphics/detail/: active_locks.cpp
RandomCatEngine/RenderObjects/: CMakeLists.txt
RandomCatEngine/RenderObjects/include/randomcat/engine/render_objects/graphics/: default_vertex.hpp  object.hpp
RandomCatEngine/Textures/: CMakeLists.txt
RandomCatEngine/Textures/include/randomcat/engine/textures/graphics/: color_texture.hpp  texture.hpp  texture_array_index.hpp  texture_binder.hpp  texture_fs.hpp  texture_manager.hpp  texture_sections.hpp
RandomCatEngine/Textures/src/: texture_fs.cpp  texture_manager.cpp
RandomCatEngine/Utilities/: CMakeLists.txt
RandomCatEngine/Utilities/include/randomcat/engine/utilities/graphics/: camera.hpp  lights.hpp
RandomCatEngine/Utilities/src/: camera.cpp  camera_shader.cpp  light_handler.cpp
RandomCatEngine/include/randomcat/engine/: controller.hpp  controller_timer.hpp  dir_pos.hpp  engine.h  engine.hpp  init.h  init.hpp
RandomCatEngine/include/randomcat/engine/detail/: log.h  log.hpp  noexcept_util.h  raii_active_lock.hpp  safe_int.hpp  tag.h  tag_exception.hpp
RandomCatEngine/include/randomcat/engine/graphics/: camera.h  camera.hpp  color.hpp  global_gl_calls.hpp  init.h  lights.hpp  object.h  object.hpp  object_renderer.h  object_renderer.hpp  render_context.hpp  renderer.h  shader.h  shader.hpp  shader_input.hpp  shader_uniforms.hpp  texture_array_index.hpp  window.h  window.hpp
RandomCatEngine/include/randomcat/engine/graphics/detail/: default_renderer.h  default_vertex.h  default_vertex.hpp  default_vertex_renderer.h  default_vertex_renderer.hpp  gl_context.h  gl_context.hpp  gl_error_guard.hpp  gl_wrappers.hpp  shader_impl.inl
RandomCatEngine/include/randomcat/engine/graphics/detail/raii_wrappers/: buffer_raii.hpp  opengl_raii_id.h  opengl_raii_id.hpp  shader_program_raii.h  shader_program_raii.hpp  texture_raii.hpp  vao_raii.h  vao_raii.hpp  vbo_raii.h  vbo_raii.hpp
RandomCatEngine/include/randomcat/engine/graphics/texture/: color_texture.hpp  stb_image.h  texture.hpp  texture_binder.h  texture_binder.hpp  texture_fs.hpp  texture_manager.h  texture_manager.hpp  texture_sections.hpp
RandomCatEngine/include/randomcat/engine/graphics/texture/detail/: texture_raii.h  texture_raii.hpp
RandomCatEngine/include/randomcat/engine/input/: input_state.h  input_state.hpp  keycodes.h  keycodes.hpp
RandomCatEngine/include/twurtle/: engine.h  init.h  library.h  log.h  renderer.h  shader.h  shader_input.h  window.h
RandomCatEngine/include/twurtle/detail/: default_renderer.h  default_vertex.h
RandomCatEngine/include/twurtle/detail/raii_wrappers/: shader_program_raii.h  vao_raii.h  vbo_raii.h
RandomCatEngine/src/: controller.cpp  init.cpp  log.cpp  shader.cpp  window.cpp
RandomCatEngine/src/detail/: log.cpp
RandomCatEngine/src/detail/raii_wrappers/: shader_program_raii.cpp  vao_raii.cpp  vbo_raii.cpp
RandomCatEngine/src/graphics/: camera.cpp  camera_shader.cpp  init.cpp  light_handler.cpp  render_context.cpp  shader.cpp  window.cpp
RandomCatEngine/src/graphics/detail/: gl_context.cpp  gl_wrappers.cpp
RandomCatEngine/src/graphics/detail/raii_wrappers/: shader_program_raii.cpp  vao_raii.cpp  vbo_raii.cpp
RandomCatEngine/src/graphics/texture/: stb_image.cpp  texture_fs.cpp  texture_manager.cpp
RandomCatEngine/src/graphics/texture/detail/: texture_raii.cpp
RandomCatEngine/src/input/: input_state.cpp
TwurtleEngine/: CMakeLists.txt
example/BasicGame/: CMakeLists.txt  custom_shader.hpp  main.cpp  main.cpp.old
lib/: CMakeLists.txt
lib/stb/: CMakeLists.txt
tools/: .clang-format  format  format_entire_history
